# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: CheckOSType.cmake  SetRuntimeDir.cmake
resources/: version.rc.in
src/: main.cpp
